...
import 'package:sales_management/utils/utils.dart';

class TimeSelector extends StatefulWidget {
  final VoidCallbackArg<DateTimeRange> onChagneDateTime;
  final VoidCallbackArg<List<String>> onChangeTime;
  static const List<String> listTime = [
    'Hôm nay',
    'Tháng này',
    'Tháng trước'
  ];
  const TimeSelector({
    super.key,
    required this.onChagneDateTime,
...
