...
                      children: [
                        LoadSvg(assetPath: 'svg/logo.svg'),
                        SizedBox(
                          height: 20,
                        ),
                        Text(
                          'Sổ Bán Hàng Điện Tử',
                          style: totalMoneyStylexXLargeBlack,
                        ),
                        SizedBox(
                          height: 30,
                        ),
                        Padding(
...
